feat: first unit test configuration